include/fastslide/c/slide_reader.h


typedef struct FastSlideSlideReader FastSlideSlideReader;
typedef struct FastSlideSlideImage FastSlideSlideImage;
typedef enum {
  FASTSLIDE_PROPERTY_TYPE_STRING,
  FASTSLIDE_PROPERTY_TYPE_SIZE_T,
  FASTSLIDE_PROPERTY_TYPE_DOUBLE
} FastSlidePropertyType;
typedef enum {
  FASTSLIDE_COLOR_SPACE_RGB,       
  FASTSLIDE_COLOR_SPACE_LINEAR,    
  FASTSLIDE_COLOR_SPACE_SRGB,      
  FASTSLIDE_COLOR_SPACE_AUTOMATIC  
} FastSlideColorSpace;
typedef enum {
  FASTSLIDE_RENDERING_INTENT_PERCEPTUAL,             
  FASTSLIDE_RENDERING_INTENT_RELATIVE_COLORIMETRIC,  
  FASTSLIDE_RENDERING_INTENT_SATURATION,             
  FASTSLIDE_RENDERING_INTENT_ABSOLUTE_COLORIMETRIC   
} FastSlideRenderingIntent;
typedef struct {
  FastSlidePropertyType type;
  union {
    const char* string_value;
    size_t size_t_value;
    double double_value;
  };
} FastSlidePropertyValue;
typedef struct {
  FastSlideImageDimensions dimensions;
  double downsample_factor;
} FastSlideLevelInfo;
typedef struct {
  double mpp_x;                    
  double mpp_y;                    
  double objective_magnification;  
  char* objective_name;            
  char* scanner_model;             
  char*
      scan_date;  
} FastSlideSlideProperties;
typedef struct {
  uint8_t r;
  uint8_t g;
  uint8_t b;
} FastSlideColorRGB;
typedef struct {
  int64_t x;       
  int64_t y;       
  int64_t width;   
  int64_t height;  
} FastSlideBounds;
typedef struct {
  char* name;               
  char* biomarker;          
  FastSlideColorRGB color;  
  uint32_t exposure_time;   
  uint32_t signal_units;    
} FastSlideChannelMetadata;
typedef struct {
  FastSlideImageCoordinate top_left;
  FastSlideImageDimensions size;
  int level;
  uint32_t z;  
  uint32_t t;  
} FastSlideRegionSpec;
typedef struct {
  uint32_t z_count;     
  uint32_t t_count;     
  int has_z_spacing;    
  double z_spacing_um;  
  int has_t_interval;   
  double t_interval_s;  
} FastSlideStackInfo;
FASTSLIDE_API int fastslide_slide_reader_get_associated_image_names(
    const FastSlideSlideReader* reader, char*** names, int* num_names);
FASTSLIDE_API void fastslide_slide_reader_free_associated_image_names(
    char** names, int num_names);
FASTSLIDE_API int fastslide_slide_reader_get_associated_image_dimensions(
    const FastSlideSlideReader* reader, const char* name,
    FastSlideImageDimensions* dimensions);
FASTSLIDE_API FastSlideImage* fastslide_slide_reader_read_associated_image(
    const FastSlideSlideReader* reader, const char* name);
FASTSLIDE_API int fastslide_slide_reader_get_metadata_keys(
    const FastSlideSlideReader* reader, char*** keys, int* num_keys);
FASTSLIDE_API void fastslide_slide_reader_free_metadata_keys(char** keys,
                                                             int num_keys);
FASTSLIDE_API int fastslide_slide_reader_get_metadata_value(
    const FastSlideSlideReader* reader, const char* key,
    FastSlidePropertyValue* value);
FASTSLIDE_API FastSlidePropertyType fastslide_slide_reader_get_metadata_type(
    const FastSlideSlideReader* reader, const char* key);
FASTSLIDE_API int fastslide_slide_reader_is_region_valid(
    const FastSlideSlideReader* reader, const FastSlideRegionSpec* region);
FASTSLIDE_API int fastslide_slide_reader_clamp_region(
    const FastSlideSlideReader* reader, const FastSlideRegionSpec* region,
    FastSlideRegionSpec* clamped_region);
FASTSLIDE_API size_t
fastslide_slide_reader_get_icc_profile_size(const FastSlideSlideReader* reader);
FASTSLIDE_API size_t fastslide_slide_reader_read_icc_profile(
    const FastSlideSlideReader* reader, uint8_t* buffer, size_t buffer_size);
FASTSLIDE_API int fastslide_slide_reader_enable_icc_transform(
    FastSlideSlideReader* reader, FastSlideColorSpace target_space,
    FastSlideRenderingIntent intent, int use_lut);
FASTSLIDE_API void fastslide_slide_reader_free(FastSlideSlideReader* reader);