include/fastslide/c/image.h


typedef enum {
  FASTSLIDE_IMAGE_FORMAT_GRAY = 1,     
  FASTSLIDE_IMAGE_FORMAT_RGB = 3,      
  FASTSLIDE_IMAGE_FORMAT_RGBA = 4,     
  FASTSLIDE_IMAGE_FORMAT_SPECTRAL = 0  
} FastSlideImageFormat;
typedef enum {
  FASTSLIDE_DATA_TYPE_UINT8,    
  FASTSLIDE_DATA_TYPE_UINT16,   
  FASTSLIDE_DATA_TYPE_INT16,    
  FASTSLIDE_DATA_TYPE_UINT32,   
  FASTSLIDE_DATA_TYPE_INT32,    
  FASTSLIDE_DATA_TYPE_FLOAT32,  
  FASTSLIDE_DATA_TYPE_FLOAT64   
} FastSlideDataType;
typedef enum {
  FASTSLIDE_PLANAR_CONFIG_CONTIG = 1,   
  FASTSLIDE_PLANAR_CONFIG_SEPARATE = 2  
} FastSlidePlanarConfig;
typedef struct {
  uint32_t width;
  uint32_t height;
} FastSlideImageDimensions;
typedef struct {
  FastSlideImageFormat format;
  FastSlideDataType data_type;
  FastSlidePlanarConfig planar_config;
  uint32_t width;
  uint32_t height;
  uint32_t channels;
  size_t bytes_per_sample;
  size_t data_size;
} FastSlideImageInfo;
typedef struct FastSlideImage FastSlideImage;
FASTSLIDE_API FastSlideImage* fastslide_image_create_rgb(
    FastSlideImageDimensions dimensions, FastSlideDataType data_type);
FASTSLIDE_API FastSlideImage* fastslide_image_create_rgba(
    FastSlideImageDimensions dimensions, FastSlideDataType data_type);
FASTSLIDE_API FastSlideImage* fastslide_image_create_grayscale(
    FastSlideImageDimensions dimensions, FastSlideDataType data_type);
FASTSLIDE_API FastSlideImage* fastslide_image_create_spectral(
    FastSlideImageDimensions dimensions, uint32_t channels,
    FastSlideDataType data_type);
FASTSLIDE_API FastSlideImage* fastslide_image_create_blank(
    FastSlideImageDimensions dimensions);
FASTSLIDE_API FastSlideImage* fastslide_image_create_solid_color(
    FastSlideImageDimensions dimensions, FastSlideDataType data_type,
    uint32_t red, uint32_t green, uint32_t blue);
FASTSLIDE_API int fastslide_image_get_info(const FastSlideImage* image,
                                           FastSlideImageInfo* info);
FASTSLIDE_API int fastslide_image_get_dimensions(
    const FastSlideImage* image, FastSlideImageDimensions* dimensions);
FASTSLIDE_API uint32_t fastslide_image_get_width(const FastSlideImage* image);
FASTSLIDE_API uint32_t fastslide_image_get_height(const FastSlideImage* image);
FASTSLIDE_API uint32_t
fastslide_image_get_channels(const FastSlideImage* image);
FASTSLIDE_API FastSlideImageFormat
fastslide_image_get_format(const FastSlideImage* image);
FASTSLIDE_API FastSlideDataType
fastslide_image_get_data_type(const FastSlideImage* image);
FASTSLIDE_API FastSlidePlanarConfig
fastslide_image_get_planar_config(const FastSlideImage* image);
FASTSLIDE_API size_t
fastslide_image_get_bytes_per_sample(const FastSlideImage* image);
FASTSLIDE_API int fastslide_image_is_empty(const FastSlideImage* image);
FASTSLIDE_API int fastslide_image_is_initialized(const FastSlideImage* image);
FASTSLIDE_API size_t
fastslide_image_get_size_bytes(const FastSlideImage* image);
FASTSLIDE_API size_t
fastslide_image_get_pixel_count(const FastSlideImage* image);
FASTSLIDE_API const uint8_t* fastslide_image_get_data(
    const FastSlideImage* image);
FASTSLIDE_API uint8_t* fastslide_image_get_data_mutable(FastSlideImage* image);
FASTSLIDE_API int fastslide_image_copy_data(const FastSlideImage* image,
                                            uint8_t* buffer,
                                            size_t buffer_size);
FASTSLIDE_API FastSlideImage* fastslide_image_to_rgb(
    const FastSlideImage* image);
FASTSLIDE_API FastSlideImage* fastslide_image_to_grayscale(
    const FastSlideImage* image);
FASTSLIDE_API FastSlideImage* fastslide_image_to_planar(
    const FastSlideImage* image);
FASTSLIDE_API FastSlideImage* fastslide_image_to_interleaved(
    const FastSlideImage* image);
FASTSLIDE_API FastSlideImage* fastslide_image_extract_channels(
    const FastSlideImage* image, const uint32_t* channel_indices,
    uint32_t num_channels);
FASTSLIDE_API FastSlideImage* fastslide_image_clone(
    const FastSlideImage* image);
FASTSLIDE_API int fastslide_image_paste(FastSlideImage* dest_image,
                                        const FastSlideImage* source_image,
                                        uint32_t dest_x, uint32_t dest_y,
                                        uint32_t source_x, uint32_t source_y,
                                        uint32_t source_width,
                                        uint32_t source_height);
FASTSLIDE_API int fastslide_image_get_description(const FastSlideImage* image,
                                                  char* buffer,
                                                  size_t buffer_size);
FASTSLIDE_API void fastslide_image_free(FastSlideImage* image);