include/fastslide/c/slide_image.h


FASTSLIDE_API void fastslide_slide_image_free(FastSlideSlideImage* image);
FASTSLIDE_API int fastslide_slide_image_get_level_count(
    const FastSlideSlideImage* image);
FASTSLIDE_API int fastslide_slide_image_get_level_info(
    const FastSlideSlideImage* image, int level, FastSlideLevelInfo* info);
FASTSLIDE_API int fastslide_slide_image_get_level_dimensions(
    const FastSlideSlideImage* image, int level,
    FastSlideImageDimensions* dimensions);
FASTSLIDE_API double fastslide_slide_image_get_level_downsample(
    const FastSlideSlideImage* image, int level);
FASTSLIDE_API int fastslide_slide_image_get_base_dimensions(
    const FastSlideSlideImage* image, FastSlideImageDimensions* dimensions);
FASTSLIDE_API int fastslide_slide_image_get_tile_size(
    const FastSlideSlideImage* image, FastSlideImageDimensions* tile_size);
FASTSLIDE_API FastSlideImageFormat
fastslide_slide_image_get_image_format(const FastSlideSlideImage* image);
FASTSLIDE_API FastSlideDataType
fastslide_slide_image_get_data_type(const FastSlideSlideImage* image);
FASTSLIDE_API int fastslide_slide_image_get_channel_metadata(
    const FastSlideSlideImage* image, FastSlideChannelMetadata** metadata,
    int* num_channels);
FASTSLIDE_API int fastslide_slide_image_get_properties(
    const FastSlideSlideImage* image, FastSlideSlideProperties* properties);
FASTSLIDE_API int fastslide_slide_image_get_bounds(
    const FastSlideSlideImage* image, FastSlideBounds* bounds);
FASTSLIDE_API int fastslide_slide_image_get_stack_info(
    const FastSlideSlideImage* image, FastSlideStackInfo* info);
FASTSLIDE_API FastSlideImage* fastslide_slide_image_read_region_coords(
    const FastSlideSlideImage* image, uint32_t x, uint32_t y, uint32_t width,
    uint32_t height, int level, uint32_t z, uint32_t t);
FASTSLIDE_API FastSlideImage* fastslide_slide_image_read_region(
    const FastSlideSlideImage* image, const FastSlideRegionSpec* region);