rust/fastslide-sys/src/lib.rs


    // ---- slide_reader.h: associated images ----
    pub fn fastslide_slide_reader_get_associated_image_names(
        reader: *const FastSlideSlideReader,
        names: *mut *mut *mut c_char,
        num_names: *mut c_int,
    ) -> c_int;
    pub fn fastslide_slide_reader_free_associated_image_names(
        names: *mut *mut c_char,
        num_names: c_int,
    );
    pub fn fastslide_slide_reader_get_associated_image_dimensions(
        reader: *const FastSlideSlideReader,
        name: *const c_char,
        dimensions: *mut FastSlideImageDimensions,
    ) -> c_int;
    pub fn fastslide_slide_reader_read_associated_image(
        reader: *const FastSlideSlideReader,
        name: *const c_char,
    ) -> *mut FastSlideImage;

    // ---- slide_reader.h: metadata access ----
    pub fn fastslide_slide_reader_get_metadata_keys(
        reader: *const FastSlideSlideReader,
        keys: *mut *mut *mut c_char,
        num_keys: *mut c_int,
    ) -> c_int;
    pub fn fastslide_slide_reader_free_metadata_keys(keys: *mut *mut c_char, num_keys: c_int);
    pub fn fastslide_slide_reader_get_metadata_value(
        reader: *const FastSlideSlideReader,
        key: *const c_char,
        value: *mut FastSlidePropertyValue,
    ) -> c_int;
    pub fn fastslide_slide_reader_get_metadata_type(
        reader: *const FastSlideSlideReader,
        key: *const c_char,
    ) -> FastSlidePropertyType;

    // ---- slide_reader.h: region validity / cleanup ----
    pub fn fastslide_slide_reader_is_region_valid(
        reader: *const FastSlideSlideReader,
        region: *const FastSlideRegionSpec,
    ) -> c_int;
    pub fn fastslide_slide_reader_clamp_region(
        reader: *const FastSlideSlideReader,
        region: *const FastSlideRegionSpec,
        clamped_region: *mut FastSlideRegionSpec,
    ) -> c_int;
    pub fn fastslide_slide_reader_free(reader: *mut FastSlideSlideReader);

    // ---- slide_reader.h: ICC color management ----
    pub fn fastslide_slide_reader_get_icc_profile_size(
        reader: *const FastSlideSlideReader,
    ) -> usize;
    pub fn fastslide_slide_reader_read_icc_profile(
        reader: *const FastSlideSlideReader,
        buffer: *mut u8,
        buffer_size: usize,
    ) -> usize;
    pub fn fastslide_slide_reader_enable_icc_transform(
        reader: *mut FastSlideSlideReader,
        target_space: FastSlideColorSpace,
        intent: FastSlideRenderingIntent,
        use_lut: c_int,
    ) -> c_int;

    // ---- slide_image.h: per-image (per-series) API ----
    pub fn fastslide_slide_image_free(image: *mut FastSlideSlideImage);
    pub fn fastslide_slide_image_get_level_count(image: *const FastSlideSlideImage) -> c_int;
    pub fn fastslide_slide_image_get_level_info(
        image: *const FastSlideSlideImage,
        level: c_int,
        info: *mut FastSlideLevelInfo,
    ) -> c_int;
    pub fn fastslide_slide_image_get_level_dimensions(
        image: *const FastSlideSlideImage,
        level: c_int,
        dimensions: *mut FastSlideImageDimensions,
    ) -> c_int;
    pub fn fastslide_slide_image_get_level_downsample(
        image: *const FastSlideSlideImage,
        level: c_int,
    ) -> c_double;
    pub fn fastslide_slide_image_get_base_dimensions(
        image: *const FastSlideSlideImage,
        dimensions: *mut FastSlideImageDimensions,
    ) -> c_int;
    pub fn fastslide_slide_image_get_tile_size(
        image: *const FastSlideSlideImage,
        tile_size: *mut FastSlideImageDimensions,
    ) -> c_int;
    pub fn fastslide_slide_image_get_image_format(
        image: *const FastSlideSlideImage,
    ) -> FastSlideImageFormat;
    pub fn fastslide_slide_image_get_data_type(
        image: *const FastSlideSlideImage,
    ) -> FastSlideDataType;
    pub fn fastslide_slide_image_get_channel_metadata(
        image: *const FastSlideSlideImage,
        metadata: *mut *mut FastSlideChannelMetadata,
        num_channels: *mut c_int,
    ) -> c_int;
    pub fn fastslide_slide_image_get_properties(
        image: *const FastSlideSlideImage,
        properties: *mut FastSlideSlideProperties,
    ) -> c_int;
    pub fn fastslide_slide_image_get_bounds(
        image: *const FastSlideSlideImage,
        bounds: *mut FastSlideBounds,
    ) -> c_int;
    pub fn fastslide_slide_image_get_stack_info(
        image: *const FastSlideSlideImage,
        info: *mut FastSlideStackInfo,
    ) -> c_int;
    pub fn fastslide_slide_image_read_region_coords(
        image: *const FastSlideSlideImage,
        x: u32,
        y: u32,
        width: u32,
        height: u32,
        level: c_int,
        z: u32,
        t: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_slide_image_read_region(
        image: *const FastSlideSlideImage,
        region: *const FastSlideRegionSpec,
    ) -> *mut FastSlideImage;

    // ---- image.h: factory functions ----
    pub fn fastslide_image_create_rgb(
        dimensions: FastSlideImageDimensions,
        data_type: FastSlideDataType,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_create_rgba(
        dimensions: FastSlideImageDimensions,
        data_type: FastSlideDataType,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_create_grayscale(
        dimensions: FastSlideImageDimensions,
        data_type: FastSlideDataType,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_create_spectral(
        dimensions: FastSlideImageDimensions,
        channels: u32,
        data_type: FastSlideDataType,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_create_blank(
        dimensions: FastSlideImageDimensions,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_create_solid_color(
        dimensions: FastSlideImageDimensions,
        data_type: FastSlideDataType,
        red: u32,
        green: u32,
        blue: u32,
    ) -> *mut FastSlideImage;

    // ---- image.h: property accessors ----
    pub fn fastslide_image_get_info(
        image: *const FastSlideImage,
        info: *mut FastSlideImageInfo,
    ) -> c_int;
    pub fn fastslide_image_get_dimensions(
        image: *const FastSlideImage,
        dimensions: *mut FastSlideImageDimensions,
    ) -> c_int;
    pub fn fastslide_image_get_width(image: *const FastSlideImage) -> u32;
    pub fn fastslide_image_get_height(image: *const FastSlideImage) -> u32;
    pub fn fastslide_image_get_channels(image: *const FastSlideImage) -> u32;
    pub fn fastslide_image_get_format(image: *const FastSlideImage) -> FastSlideImageFormat;
    pub fn fastslide_image_get_data_type(image: *const FastSlideImage) -> FastSlideDataType;
    pub fn fastslide_image_get_planar_config(image: *const FastSlideImage)
        -> FastSlidePlanarConfig;
    pub fn fastslide_image_get_bytes_per_sample(image: *const FastSlideImage) -> usize;
    pub fn fastslide_image_is_empty(image: *const FastSlideImage) -> c_int;
    pub fn fastslide_image_is_initialized(image: *const FastSlideImage) -> c_int;
    pub fn fastslide_image_get_size_bytes(image: *const FastSlideImage) -> usize;
    pub fn fastslide_image_get_pixel_count(image: *const FastSlideImage) -> usize;

    // ---- image.h: data access ----
    pub fn fastslide_image_get_data(image: *const FastSlideImage) -> *const u8;
    pub fn fastslide_image_get_data_mutable(image: *mut FastSlideImage) -> *mut u8;
    pub fn fastslide_image_copy_data(
        image: *const FastSlideImage,
        buffer: *mut u8,
        buffer_size: usize,
    ) -> c_int;

    // ---- image.h: conversions ----
    pub fn fastslide_image_to_rgb(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_image_to_grayscale(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_image_to_planar(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_image_to_interleaved(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_image_extract_channels(
        image: *const FastSlideImage,
        channel_indices: *const u32,
        num_channels: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_image_clone(image: *const FastSlideImage) -> *mut FastSlideImage;

    // ---- image.h: operations ----
    pub fn fastslide_image_paste(
        dest_image: *mut FastSlideImage,
        source_image: *const FastSlideImage,
        dest_x: u32,
        dest_y: u32,
        source_x: u32,
        source_y: u32,
        source_width: u32,
        source_height: u32,
    ) -> c_int;
    pub fn fastslide_image_get_description(
        image: *const FastSlideImage,
        buffer: *mut c_char,
        buffer_size: usize,
    ) -> c_int;
    pub fn fastslide_image_free(image: *mut FastSlideImage);

    // ---- utilities.h: resampling ----
    pub fn fastslide_lanczos_resample(
        image: *const FastSlideImage,
        output_width: u32,
        output_height: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_lanczos2_resample(
        image: *const FastSlideImage,
        output_width: u32,
        output_height: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_cosine_resample(
        image: *const FastSlideImage,
        output_width: u32,
        output_height: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_average_resample(
        image: *const FastSlideImage,
        factor: u32,
    ) -> *mut FastSlideImage;
    pub fn fastslide_average_2x2_resample(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_average_4x4_resample(image: *const FastSlideImage) -> *mut FastSlideImage;
    pub fn fastslide_average_8x8_resample(image: *const FastSlideImage) -> *mut FastSlideImage;

    // ---- utilities.h: PNG I/O (examples) ----
    pub fn fastslide_examples_save_as_png(
        image: *const FastSlideImage,
        filename: *const c_char,
    ) -> c_int;
    pub fn fastslide_examples_load_from_png(filename: *const c_char) -> *mut FastSlideImage;
}
